now links the sport type too for statistics

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,9 @@ NOTION_ACTIVITIES_DB_ID=your_activities_database_id
 # The Planned Activities database where planned workouts are stored
 NOTION_PLANNED_DB_ID=your_planned_activities_database_id
 
+# The Sports database containing sport types (Run, Bike, Swim, Abs, Stretching, Gym)
+NOTION_SPORTS_DB_ID=your_sports_database_id
+
 # Optional: Number of days to look back for activities (default: 7)
 DAYS_BACK=7
 
